# AI-Talent-Lab

./: .coveragerc  .env.example  .gitignore  AGENT_PROMPTS.md  CLAUDE.md  Makefile  README.md  check_braces.js  docker-compose.yml  fix_chat_service.py  fix_orchestrator.py  implementation_plan_etc.md  parse_jsx.js  pyproject.toml  run.txt  run_migration.py  test_api.py  test_db.py  test_esbuild.js  test_generate_ik.py  test_jsx.js  test_type.py
backend/: .dockerignore  Dockerfile  README.md  __init__.py  agent.py  celery_app.py  config.py  dependencies.py  exceptions.py  main.py  nodes.py  pyproject.toml  pytest.ini  requirements.txt  session_store.py  state.py  tools.py
backend/adapters/: __init__.py
backend/agents/: __init__.py  bias_checker.py  candidate_chat.py  debrief_generator.py  feedback_enricher.py  interview_agents.py  interview_kit.py  orchestrator.py  rejection_drafter.py  resume_parser.py  state.py  streaming.py
backend/db/: __init__.py  connection.py  database.py  migrations.py  search_tool.py  talent_lab.sqlite  vector_store.py
backend/middleware/: __init__.py  cors.py  rate_limiter.py  request_logger.py  tenant_context.py
backend/models/: __init__.py  analytics.py  apply.py  auth.py  candidates.py  chat.py  dashboard.py  hire_request.py  interviews.py  notifications.py  positions.py  scorecards.py  settings.py  talent_pool.py
backend/prompts/: benchmarking_agent.md  drafting_agent.md  internal_agent.md  interviewer_agent.md
backend/routers/: __init__.py  analytics.py  apply.py  auth.py  billing.py  candidate_portal.py  candidates.py  chat.py  (+17 more)
(+569 files in other folders)
